tests/ui/macros/missing-writer.stderr
error: format argument must be a string literal
  --> $DIR/missing-writer.rs:5:21
   |
LL |     write!("{}_{}", x, y);
   |                     ^
   |
help: you might be missing a string literal to format with
   |
LL |     write!("{}_{}", "{} {}", x, y);
   |                     ++++++++

error: format argument must be a string literal
  --> $DIR/missing-writer.rs:11:23
   |
LL |     writeln!("{}_{}", x, y);
   |                       ^
   |
help: you might be missing a string literal to format with
   |
LL |     writeln!("{}_{}", "{} {}", x, y);
   |                       ++++++++

error[E0599]: cannot write into `&'static str`
  --> $DIR/missing-writer.rs:5:5
   |
LL |     write!("{}_{}", x, y);
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type does not implement the `write_fmt` method
   = help: try adding `use std::fmt::Write;` or `use std::io::Write;` to bring the appropriate trait into scope
   = note: this error originates in the macro `write` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: cannot write into `&'static str`
  --> $DIR/missing-writer.rs:11:5
   |
LL |     writeln!("{}_{}", x, y);
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type does not implement the `write_fmt` method
   = help: try adding `use std::fmt::Write;` or `use std::io::Write;` to bring the appropriate trait into scope
   = note: this error originates in the macro `writeln` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0599`.
